--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="xyz.iridiumion.enlightened.MainActivity">
+    tools:context=".activity.MainActivity">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/content_frame"
