--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,7 +2,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <CheckBoxPreference
         android:defaultValue="true"
-        android:key="show_tab_tool"
+        android:key="@string/prefs_key_show_tab_tool"
         android:summary="@string/pref_show_tab_tool_summary"
         android:title="@string/pref_show_tab_tool" />
 </PreferenceScreen>
