add save as and toast-showing

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -5,4 +5,9 @@
         android:key="@string/prefs_key_show_tab_tool"
         android:summary="@string/pref_show_tab_tool_summary"
         android:title="@string/pref_show_tab_tool" />
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="@string/prefs_key_autosave"
+        android:summary="@string/pref_autosave_summary"
+        android:title="@string/pref_autosave" />
 </PreferenceScreen>
