--- a/app/src/main/res/values/prefstrings.xml
+++ b/app/src/main/res/values/prefstrings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="prefs_key_show_tab_tool">show_tab_tool</string>
+    <string name="prefs_key_autosave">autosave</string>
 </resources>
