--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <CheckBoxPreference
-        android:defaultValue="true"
-        android:key="@string/prefs_key_show_tab_tool"
-        android:summary="@string/pref_show_tab_tool_summary"
-        android:title="@string/pref_show_tab_tool" />
-    <CheckBoxPreference
-        android:defaultValue="false"
-        android:key="@string/prefs_key_autosave"
-        android:summary="@string/pref_autosave_summary"
-        android:title="@string/pref_autosave" />
-    <EditTextPreference
-        android:defaultValue="12"
-        android:inputType="number"
-        android:key="@string/prefs_key_font_size"
-        android:summary="@string/pref_font_size_summary"
-        android:title="@string/pref_font_size" />
-    
+    <PreferenceCategory android:title="@string/prefs_header_editor">
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="@string/prefs_key_show_tab_tool"
+            android:summary="@string/pref_show_tab_tool_summary"
+            android:title="@string/pref_show_tab_tool" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="@string/prefs_key_autosave"
+            android:summary="@string/pref_autosave_summary"
+            android:title="@string/pref_autosave" />
+        <EditTextPreference
+            android:defaultValue="12"
+            android:inputType="number"
+            android:key="@string/prefs_key_font_size"
+            android:summary="@string/pref_font_size_summary"
+            android:title="@string/pref_font_size" />
+    </PreferenceCategory>
 </PreferenceScreen>
