--- a/app/src/main/res/layout/fragment_editor.xml
+++ b/app/src/main/res/layout/fragment_editor.xml
@@ -4,21 +4,20 @@
     android:layout_height="match_parent"
     tools:context="xyz.iridiumion.enlightened.fragment.EditorFragment">
 
-    <xyz.iridiumion.enlightened.editor.IridiumHighlightingEditorJ
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <xyz.iridiumion.enlightened.editor.IridiumHighlightingEditorJ xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:ignore="Overdraw"
         android:id="@+id/editor"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        android:padding="8dp"
+        android:background="@color/background_editor"
         android:gravity="start|top"
-        android:typeface="monospace"
-        android:textSize="12sp"
-        android:textColor="@color/editor_text"
         android:imeOptions="flagNoExtractUi"
         android:inputType="textVisiblePassword|textMultiLine"
-        android:background="@color/background_editor"/>
+        android:padding="8dp"
+        android:scrollbars="vertical"
+        android:textColor="@color/editor_text"
+        android:textSize="12sp"
+        android:typeface="monospace"
+        tools:ignore="Overdraw" />
 
 </FrameLayout>
