--- a/app/src/main/res/values/editorcolors.xml
+++ b/app/src/main/res/values/editorcolors.xml
@@ -7,6 +7,7 @@
     <color name="syntax_comment">#9f9f9f</color>
     <color name="syntax_symbol">#0e2d00</color>
     <color name="syntax_string">#9c5906</color>
+    <color name="syntax_identifier">#000883</color>
     <color name="editor_text">#262626</color>
     <color name="background_editor">#f5f5f5</color>
 </resources>
